<resources>
    <string name="app_name">Music</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_empty">No data !!</string>
    <string name="regesterd_successfuly">Registered Successfully</string>
    <string name="registeration_failed">Failed to register , please check your data</string>
    <string name="user_name">User name</string>
    <string name="log_out">Sign out</string>
    <string name="login">Login</string>
    <string name="login_error">Login failed , please check your entered data</string>
    <string name="fill_fields">please fill empty fields</string>
    <string name="title">Email</string>
    <string name="text">Password</string>
    <string name="downloading">downloading file</string>
    <string name="details">Details</string>
    <string name="view_book">View Book</string>
    <string name="have_account">You have an account ?</string>
    <string name="view_video">View Video</string>
    <string name="buy_video">Buy Video</string>
    <string name="purchased">Vido Purchase completed successfuly</string>
    <string name="purchase_err">Purchase Error , couldn\'t purchase video</string>
    <string name="please_register">Sorry , you need to register first</string>
    <string name="please_login">You have to login first</string>
    <string name="low_balance">Sorry , not enough tones</string>
    <string name="watch">Watch Video</string>
    <string name="close">Clsoe</string>
    <string name="request_done">your request has been submitted  successfully</string>
    <string name="song_title">Song name</string>
    <string name="request_text">Request details</string>
    <string name="send_request">Send</string>
    <string name="request_error">Error your request couldn\'t be sent</string>
    <string name="empty_title">request can\'t be empty,please enter song name</string>
    <string name="title_info">Info</string>
    <string name="btn_yes">Yes</string>
    <string name="oriental_music">Oriental Music</string>
    <string name="user">User</string>
    <string name="textview">TextView</string>
    <string name="videos">Videos</string>
    <string name="books">Books</string>
    <string name="products">Products</string>
    <string name="more">More</string>
    <string name="request_song">Request song</string>
    <string name="contact_us">Contact us</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="category_name">category name</string>
    <string name="free">Free</string>
    <string name="rewarded_by">Great .. Tones earned :</string>
    <string name="load_ad_error">Error  loading video , please try again later</string>
    <string name="cancel">cancel</string>
</resources>
