<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:gravity="center"
    android:padding="10dp"
    android:minWidth="300dp"
    android:background="@color/white"
    android:alpha="0.85"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:layout_margin="14dp"
        android:text="@string/low_balance" />
    <Button
        android:id="@+id/btnPlay"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/background"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/watch" />
    <Button
        android:id="@+id/btnClose"
        android:layout_width="150dp"
        android:layout_marginTop="20dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/close" />

</LinearLayout>