<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:orientation="vertical"
    tools:context="com.orientalmusic.music.fragment.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="01"
        android:layout_margin="6dp"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/crdUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="4dp"
            android:alpha="0.75">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:layout_margin="2dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@mipmap/user" />
                <TextView
                    android:id="@+id/txtUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:text="@string/user"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/crdTones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_weight="2"
            android:alpha="0.75">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    app:srcCompat="@mipmap/tone" />

                <TextView
                    android:id="@+id/txtBalance"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:textColor="@color/colorAccent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/crdVideo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:alpha="0.75">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"

                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/videos" />

            <TextView
                android:id="@+id/txtVideos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:text="@string/videos"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/crdBooks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:alpha="0.75">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:layout_margin="4dp"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/books" />

            <TextView
                android:id="@+id/txtBooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"

                android:layout_weight="1"
                android:text="@string/books"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/crdProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/gold"
        android:alpha="0.75">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView33"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:layout_margin="4dp"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/products" />

            <TextView
                android:id="@+id/txtProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"

                android:layout_weight="1"
                android:text="@string/products"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/crdExtra"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:alpha="0.75">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:layout_margin="4dp"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/more" />

            <TextView
                android:id="@+id/txtMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"

                android:text="@string/more"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/crdRequest"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:alpha="0.75">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:layout_margin="4dp"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/request_song" />

            <TextView
                android:id="@+id/txtRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"

                android:text="@string/request_song"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/crdContact"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:alpha="0.75">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/about" />

            <TextView
                android:id="@+id/txtContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"

                android:text="@string/contact_us"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
